<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"

	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingLeft="16dp"
	android:paddingRight="16dp" >

<!--
	 	android:layout_width="510dp"
        android:layout_alignParentRight="true"
 -->

	<EditText
		android:id="@+id/from"
		android:layout_width="350dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="50dp"
		android:hint="@string/from" />

	<EditText
		android:id="@+id/to"
		android:layout_width="350dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="50dp"
        android:layout_below="@id/from"
		android:hint="@string/to" />

	<EditText
		android:id="@+id/via"
		android:layout_width="270dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="50dp"
        android:layout_below="@id/to"
		android:hint="@string/via" />

	<Button
		android:id="@+id/via_button"
		android:layout_width="50dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="350dp"
        android:layout_below="@id/to"
        android:text="@string/via"
	/>

	<Button
		android:id="@+id/search"
		android:layout_width="350dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="50dp"
        android:layout_below="@id/via"
        android:text="@string/search"
		android:onClick="search"
	/>

	<Button
		android:id="@+id/stats"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="50dp"
        android:layout_below="@id/search"
        android:text="@string/stats"
 		android:onClick="seeStats"
	/>
	
	<Button
		android:id="@+id/logs"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="250dp"
        android:layout_below="@id/search"
        android:text="@string/logs"
		android:onClick="watchLogs"
	/>
</RelativeLayout>