<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gobiggreen.SearchActivity$PlaceholderFragment" >

	<Button
		android:id="@+id/more_options_button"
		android:layout_width="500dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="50dp"
        android:text="@string/more_options"
 		android:onClick="moreOptions" />

	<TextView
		android:id="@+id/from"
		android:layout_width="350dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="50dp"
		android:layout_below="@id/more_options_button"
		android:hint="@string/travel" />

	<Button
		android:id="@+id/more_button"
		android:layout_width="500dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="220dp"
		android:layout_marginLeft="50dp"
		android:layout_below="@id/from"
        android:text="@string/more" />

</RelativeLayout>