<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gobiggreen.StatsPageActivity$PlaceholderFragment" >

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="70dp"
		android:layout_marginLeft="100dp"
		android:tint="#55ff0000"
		android:src="@drawable/graph_example"/>

	<Button
		android:id="@+id/today"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="400dp"
		android:layout_marginLeft="50dp"
        android:text="@string/today"
	/>

	<Button
		android:id="@+id/week"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="400dp"
		android:layout_marginLeft="220dp"
        android:text="@string/week"
	/>
	
	<Button
		android:id="@+id/month"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="400dp"
		android:layout_marginLeft="390dp"
        android:text="@string/month"
	/>
	
</RelativeLayout>
