<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gobiggreen.MoreOptionActivity$PlaceholderFragment" >

	<TextView
		android:id="@+id/transportation"
		android:layout_width="350dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="240dp"
		android:hint="@string/transportation" />

	<TextView
		android:id="@+id/car"
		android:layout_width="350dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:layout_marginLeft="220dp"
		android:layout_below="@id/transportation"
		android:hint="@string/car" />

   	<ToggleButton 
	    android:id="@+id/carToggle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
		android:layout_marginLeft="280dp"
		android:layout_below="@id/transportation"
	    android:textOn="On"
	    android:textOff="Off" />

	<TextView
		android:id="@+id/metro"
		android:layout_width="350dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:layout_marginLeft="220dp"
		android:layout_below="@id/carToggle"
		android:hint="@string/metro" />

	<ToggleButton 
	    android:id="@+id/metroToggle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
		android:layout_marginLeft="280dp"
		android:layout_below="@id/carToggle"
	    android:textOn="On"
	    android:textOff="Off" />

	<TextView
		android:id="@+id/cycle"
		android:layout_width="350dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:layout_marginLeft="220dp"
		android:layout_below="@id/metroToggle"
		android:hint="@string/cycle" />

	<ToggleButton 
	    android:id="@+id/cycleToggle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
		android:layout_marginLeft="280dp"
		android:layout_below="@id/metroToggle"
	    android:textOn="On"
	    android:textOff="Off" />
	
	<TextView
		android:id="@+id/walk"
		android:layout_width="350dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:layout_marginLeft="220dp"
		android:layout_below="@id/cycleToggle"
		android:hint="@string/walk" />

	<ToggleButton 
	    android:id="@+id/walkToggle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
		android:layout_marginLeft="280dp"
		android:layout_below="@id/cycleToggle"
	    android:textOn="On"
	    android:textOff="Off" />
	
<!--	    android:onClick="onToggleClicked" -->
</RelativeLayout>
